<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/primaryVariant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".features.splash.SplashFragment">

        <ImageView
            android:scaleType="centerCrop"
            android:src="@drawable/background"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/profile"
            android:transitionName="transitionProfile"
            app:layout_constraintBottom_toBottomOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline" />

        <TextView
            android:id="@+id/txtName"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dev_name"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:transitionName="transitionName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image" />

        <TextView
            android:id="@+id/txtCountry"
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dev_nationality"
            android:textColor="@color/primary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:transitionName="transitionNationality"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtName" />

        <TextView
            android:id="@+id/txtfocus"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dev_focus"
            android:textColor="@color/primary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCountry" />

        <TextView
            android:id="@+id/txtStudy"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/experience"
            android:textColor="@color/green_dark"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtfocus" />

        <TextView
            android:id="@+id/txtExperience1"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/experience_1"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtStudy" />

        <TextView
            android:id="@+id/txtExperience1_date"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/experience_1_date"
            android:textColor="@color/primary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtExperience1" />

        <TextView
            android:id="@+id/txtExperience1_description"
            android:layout_marginTop="5dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/experience_1_description"
            android:textColor="@color/primary"
            android:textSize="16sp"
            android:textStyle="bold"
            android:autoLink="web"
            android:textColorLink="@color/green_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtExperience1_date" />

        <TextView
            android:id="@+id/txtExperience2"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/experience_2"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtExperience1_description" />

        <TextView
            android:id="@+id/txtExperience2_date"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/experience_2_date"
            android:textColor="@color/primary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtExperience2" />

        <TextView
            android:id="@+id/txtExperience2_description"
            android:layout_marginTop="5dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/experience_2_description"
            android:textColor="@color/primary"
            android:textSize="16sp"
            android:textStyle="bold"
            android:autoLink="web"
            android:textColorLink="@color/green_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtExperience2_date" />

        <TextView
            android:id="@+id/txtExperience3"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/experience_3"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtExperience2_description" />

        <TextView
            android:id="@+id/txtExperience3_date"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/experience_3_date"
            android:textColor="@color/primary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtExperience3" />

        <TextView
            android:id="@+id/txtExperience3_description"
            android:layout_marginTop="5dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/experience_3_description"
            android:textColor="@color/primary"
            android:textSize="16sp"
            android:textStyle="bold"
            android:autoLink="web"
            android:textColorLink="@color/green_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtExperience3_date" />

        <TextView
            android:id="@+id/txtInterest"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interest"
            android:textColor="@color/green_dark"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtExperience3_description" />

        <TextView
            android:id="@+id/txtInterest_description"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interest_description"
            android:textColor="@color/primary"
            android:textSize="16sp"
            android:textStyle="bold"
            android:autoLink="web"
            android:textColorLink="@color/green_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInterest" />

        <View
            app:layout_constraintTop_toBottomOf="@+id/txtInterest_description"
            android:layout_width="match_parent"
            android:layout_height="30dp"/>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            app:layout_constraintGuide_begin="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"/>




    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
